--- a/web/pom.xml
+++ b/web/pom.xml
@@ -88,11 +88,19 @@
 			<scope>runtime</scope>
 		</dependency>
 		
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-test</artifactId>
+		<scope>test</scope>
+	</dependency>
+
+	<dependency>
+		<groupId>pl.pragmatists</groupId>
+		<artifactId>JUnitParams</artifactId>
+		<version>1.1.1</version>
+		<scope>test</scope>
+	</dependency>
+		
 
 		<!-- Use MySQL Connector-J -->
 
