--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,25 @@
 # Compiled class file
 *.class
 
+# Eclipse project files
+.classpath
+.project
+.settings/
+
+# Intellij project files
+*.iml
+*.ipr
+*.iws
+.idea/
+
+/target
+/target/
+**/target/
+
+
 # Log file
 *.log
+*.log*
 
 # BlueJ files
 *.ctxt
