--- a/src/test/resourses/application.properties
+++ b/src/test/resourses/application.properties
@@ -1,6 +1,2 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/db_web_service
-spring.datasource.username=uwebservice
-spring.datasource.password=pwebservice
-spring.datasource.dbcp2.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:h2:mem:test
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
